--- a/package.json
+++ b/package.json
@@ -18,20 +18,21 @@
     "expo": "~47.0.6",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
-    "expo-image-picker": "~14.0.1",
+    "expo-image-picker": "14.0.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "intl": "^1.2.5",
     "react": "18.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "^0.18.10",
     "styled-components": "^5.3.6"
