feat/input and loading

--- a/ios/imob.xcodeproj/xcshareddata/xcschemes/imob.xcscheme
+++ b/ios/imob.xcodeproj/xcshareddata/xcschemes/imob.xcscheme
@@ -13,7 +13,7 @@
             buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
-               BuildableIdentifier = "primary"
+               BuildableIdentifier = "SECONDARY"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "imob.app"
                BlueprintName = "imob"
@@ -31,7 +31,7 @@
          <TestableReference
             skipped = "NO">
             <BuildableReference
-               BuildableIdentifier = "primary"
+               BuildableIdentifier = "SECONDARY"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "imobTests.xctest"
                BlueprintName = "imobTests"
@@ -53,7 +53,7 @@
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
-            BuildableIdentifier = "primary"
+            BuildableIdentifier = "SECONDARY"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "imob.app"
             BlueprintName = "imob"
@@ -70,7 +70,7 @@
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
-            BuildableIdentifier = "primary"
+            BuildableIdentifier = "SECONDARY"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "imob.app"
             BlueprintName = "imob"
