--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "^0.18.10",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "typescript-styled-plugin": "^0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
